rental/kubernetes/failed_liveness.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental
  namespace: wavve
  labels:
    app: rental
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental
  template:
    metadata:
      labels:
        app: rental
    spec:
      containers:
        - name: rental
          image: wavve.azurecr.io/rental:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/failed' 
              port: 8090               #liveness 잘 못된 정보로 설정 수정
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          # volumeMounts:
          #   - name: volume
          #     mountPath: "/mnt/azure"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "500m"
    #  volumes:
    #  - name: volume
    #    persistentVolumeClaim:
    #      claimName: rental-disk
