rental/kubernetes/rental-istio.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-rental-network-rule
    namespace: wavve
  spec:
    hosts:
    - rental
    http:
    - route:
      - destination:
          host: rental
      timeout: 3s
